--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,25 +3,15 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+  --primary-color-1: #111111;
+  --primary-color-2: #161616;
+  --secondary-color: #232323;
+  --accent-color-1: #3e3e3e;
+  --accent-color-2: #b3b3b3;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: var(--primary-color-1);
+  color: var(--accent-color-2);
+  font-family: var(--font-open-sans);
 }
