--- a/src/components/Navbar/navbar.module.scss
+++ b/src/components/Navbar/navbar.module.scss
@@ -13,7 +13,7 @@
         background-color: #282828;
     }
 
-    @media (min-width: 768px) {
+    @media screen and (min-width: 640px) {
         scrollbar-width: none;
         -ms-overflow-style: none;
 
